log
Sun, May  4, 2025  9:35:15 AM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sun, May  4, 2025 10:50:25 AM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|7
total_score: 5/70
20c82f0
Sun, May  4, 2025 10:54:00 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:79:13: error: implicit declaration of function 'is_equual' [-Werror=implicit-function-declaration]
         if (is_equual(tree, key, temp->pair->key) == 1) {
             ^~~~~~~~~
cc1.exe: all warnings being treated as errors
c191a58
Sun, May  4, 2025 10:54:20 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
ce15df1
Sun, May  4, 2025  2:12:28 PM: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
Compilation failed
test.c: In function 'insertTreeMap':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
135fdcd
Sun, May  4, 2025  2:13:28 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
8b5481c
